# SeriousVisionAiAgent

./: .gitignore  DEVELOPMENT.md  LICENSE  PRODUCT_REQUIREMENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  start_client.py  start_server.py
config/: .env.example  default.yaml
desktop_agent/: main.py
desktop_agent/core/: __init__.py  api_client.py  hotkey_manager.py  image_processor.py  screen_monitor.py  tts_engine.py
server/: main.py
server/api/: __init__.py  health.py  processing.py  users.py
server/models/: __init__.py  accessibility_annotation.py  base.py  cache_entry.py  processing_job.py  user.py
server/services/: __init__.py  llm_providers.py  vision_service.py
server/utils/: __init__.py  config.py  database.py  logging_config.py
